Add Migrations in Gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 Persistencia/ApplicationDbContext.cs
 C:\Users\fabianandres\Documents\Programacion\Project X\FrontEnd\obj
+C:\Users\fabianandres\Documents\Programacion\Project X\Persistencia\Migrations
