--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 
 Persistencia/ApplicationDbContext.cs
-C:\Users\fabianandres\Documents\Programacion\Project X\FrontEnd\obj
-C:\Users\fabianandres\Documents\Programacion\Project X\Persistencia\Migrations
+C:/Users/fabianandres/Documents/Programacion/Project X/FrontEnd\obj
+C:/Users/fabianandres/Documents/Programacion/Project X/Persistencia\Migrations
+Persistencia/obj
