CRUD Pedidos (Sin Add y Edit)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 
-Persistencia/ApplicationDbContext.cs
-C:/Users/fabianandres/Documents/Programacion/Project X/FrontEnd\obj
-C:/Users/fabianandres/Documents/Programacion/Project X/Persistencia\Migrations
+
 Persistencia/obj
 Persistencia/ApplicationDbContext.cs
+Persistencia/Migrations
